<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="8dp"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootWarningDialog">
    <View
        android:id="@+id/spaceTopDialog"
        android:layout_width="0dp"
        android:layout_height="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@color/amber_400"/>
    <ImageView
        android:id="@+id/imgWarningDialog"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@+id/spaceTopDialog"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="14dp"
        android:layout_marginStart="16dp"
        app:srcCompat="@drawable/ic_warning"
        android:contentDescription="@null"/>
    <TextView
        android:id="@+id/titleWarningDialog"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/spaceTopDialog"
        app:layout_constraintStart_toEndOf="@+id/imgWarningDialog"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="16dp"
        android:textColor="@color/grey_800"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/delete_search_history"/>
    <TextView
        android:id="@+id/messageWarningDialog"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/titleWarningDialog"
        app:layout_constraintStart_toEndOf="@+id/imgWarningDialog"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="16dp"
        android:textColor="@color/grey_800"
        android:textSize="16sp"
        android:textStyle="normal"
        android:text="@string/message_warning_dialog"/>
    <View
        android:id="@+id/lineTopDialog"
        android:layout_width="0dp"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@+id/messageWarningDialog"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@color/amber_400"/>
    <Button
        android:id="@+id/btnCancelDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/lineTopDialog"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/bg_native_btn_dialog"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:text="@string/cancel"
        app:backgroundTint="@null"/>
    <Button
        android:id="@+id/btnConfirmationDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/lineTopDialog"
        app:layout_constraintStart_toEndOf="@+id/btnCancelDialog"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/bg_positive_btn_dialog"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:text="@string/confirmation"
        app:backgroundTint="@null"/>
</androidx.constraintlayout.widget.ConstraintLayout>