<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginHorizontal="8dp"
    android:background="@drawable/bg_card_main">
    <TextView
        android:id="@+id/titleDetail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:drawableStartCompat="@drawable/ic_detail"
        android:drawablePadding="8dp"
        android:paddingHorizontal="12dp"
        android:paddingVertical="8dp"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:text="@string/detail"/>
    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@+id/titleDetail"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginHorizontal="8dp"
        android:background="@color/white"
        android:alpha="0.6"/>
    <LinearLayout
        android:id="@+id/card1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="4dp"
        app:layout_constraintTop_toBottomOf="@+id/titleDetail"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/card2"
        app:layout_constraintHorizontal_weight="1"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:background="@android:color/transparent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:drawableTopCompat="@drawable/ic_sunset"
            android:drawablePadding="4dp"
            android:includeFontPadding="false"
            android:layout_marginTop="4dp"
            android:maxLines="1"
            app:autoSizeTextType="uniform"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/sunset"/>
        <TextView
            android:id="@+id/textSunset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:layout_marginTop="4dp"
            android:maxLines="1"
            app:autoSizeTextType="uniform"
            android:textSize="15sp"
            android:textColor="@color/white"
            tools:text="8:00 pm"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/card2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="4dp"
        app:layout_constraintTop_toBottomOf="@+id/titleDetail"
        app:layout_constraintRight_toLeftOf="@+id/card3"
        app:layout_constraintLeft_toRightOf="@+id/card1"
        app:layout_constraintHorizontal_weight="1"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:background="@android:color/transparent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:drawableTopCompat="@drawable/ic_sunrise"
            android:drawablePadding="4dp"
            android:includeFontPadding="false"
            android:layout_marginTop="4dp"
            android:maxLines="1"
            app:autoSizeTextType="uniform"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/sunrise"/>
        <TextView
            android:id="@+id/textSunrise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:layout_marginTop="4dp"
            android:maxLines="1"
            app:autoSizeTextType="uniform"
            android:textSize="15sp"
            android:textColor="@color/white"
            tools:text="6:00 am"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/card3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="4dp"
        app:layout_constraintTop_toBottomOf="@+id/titleDetail"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/card2"
        app:layout_constraintHorizontal_weight="1"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:background="@android:color/transparent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:drawableTopCompat="@drawable/ic_wind"
            android:drawablePadding="4dp"
            android:includeFontPadding="false"
            android:layout_marginTop="4dp"
            android:maxLines="1"
            app:autoSizeTextType="uniform"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/wind_speed"/>
        <TextView
            android:id="@+id/textWindSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:layout_marginTop="4dp"
            android:textSize="15sp"
            android:textColor="@color/white"
            tools:text="10km/h"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/card4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="4dp"
        app:layout_constraintTop_toBottomOf="@+id/card1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/card2"
        app:layout_constraintHorizontal_weight="1"
        android:gravity="center"
        android:background="@android:color/transparent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:drawableTopCompat="@drawable/ic_cloud"
            android:drawablePadding="4dp"
            android:includeFontPadding="false"
            android:layout_marginTop="4dp"
            android:maxLines="1"
            app:autoSizeTextType="uniform"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/cloud_cover"/>
        <TextView
            android:id="@+id/textCloudCover"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:layout_marginTop="4dp"
            android:textSize="15sp"
            android:textColor="@color/white"
            tools:text="25%"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/card5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="4dp"
        app:layout_constraintTop_toBottomOf="@+id/card2"
        app:layout_constraintRight_toLeftOf="@+id/card3"
        app:layout_constraintLeft_toRightOf="@+id/card1"
        app:layout_constraintHorizontal_weight="1"
        android:gravity="center"
        android:background="@android:color/transparent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:drawableTopCompat="@drawable/ic_pressure"
            android:drawablePadding="4dp"
            android:includeFontPadding="false"
            android:layout_marginTop="4dp"
            android:maxLines="1"
            app:autoSizeTextType="uniform"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/pressure"/>
        <TextView
            android:id="@+id/textPressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:layout_marginTop="4dp"
            android:textSize="15sp"
            android:textColor="@color/white"
            tools:text="1000 hPa"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/card6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="4dp"
        app:layout_constraintTop_toBottomOf="@+id/card3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/card2"
        app:layout_constraintHorizontal_weight="1"
        android:gravity="center"
        android:background="@android:color/transparent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:drawableTopCompat="@drawable/ic_hygrometer"
            android:drawablePadding="4dp"
            android:includeFontPadding="false"
            android:layout_marginTop="4dp"
            android:maxLines="1"
            app:autoSizeTextType="uniform"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/hygrometer"/>
        <TextView
            android:id="@+id/textHygrometer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:layout_marginTop="4dp"
            android:textSize="15sp"
            android:textColor="@color/white"
            tools:text="15%"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>