<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:fitsSystemWindows="true"
    android:id="@+id/mainDrawer"
    tools:ignore="RtlHardcoded"
    tools:openDrawer="start">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_main"
        android:orientation="vertical">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/mainActionbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            android:background="@color/deep_purple_a100"
            android:theme="@style/ThemeOverlay.MaterialComponents.Dark"
            app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light">
            <ProgressBar
                android:id="@+id/progressFinshed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:indeterminate="true"
                android:visibility="gone"
                android:theme="@style/Theme.SimpleWeather.ProgressBarTint"/>
        </androidx.appcompat.widget.Toolbar>
        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/refreshApp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp">
                    <TextView
                        android:id="@+id/textDescription"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentRight="true"
                        android:includeFontPadding="false"
                        android:padding="2dp"
                        android:textSize="15sp"
                        android:textColor="@color/white"
                        tools:text="تا حدودی آفتابی"/>
                    <TextView
                        android:id="@+id/textCurrentTemp"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_below="@+id/textDescription"
                        android:layout_alignParentRight="true"
                        android:includeFontPadding="false"
                        android:paddingHorizontal="2dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginRight="8dp"
                        android:gravity="center"
                        android:textSize="38sp"
                        android:textColor="@color/white"
                        tools:text="33"/>
                    <ImageView
                        android:id="@+id/iconWeather"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_below="@+id/textDescription"
                        android:layout_toLeftOf="@+id/textCurrentTemp"
                        android:layout_marginTop="8dp"
                        android:layout_marginRight="8dp"
                        android:scaleType="fitCenter"
                        android:contentDescription="@null"
                        tools:src="@drawable/w02d"/>
                    <TextView
                        android:id="@+id/textMaxTemp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/iconWeather"
                        android:layout_alignParentRight="true"
                        app:drawableRightCompat="@drawable/ic_max_temp"
                        android:drawablePadding="4dp"
                        android:includeFontPadding="false"
                        android:layout_marginTop="8dp"
                        android:layout_marginRight="8dp"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        tools:text="35"/>
                    <TextView
                        android:id="@+id/textMinTemp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/iconWeather"
                        android:layout_toLeftOf="@+id/textMaxTemp"
                        app:drawableRightCompat="@drawable/ic_min_temp"
                        android:drawablePadding="4dp"
                        android:includeFontPadding="false"
                        android:layout_marginTop="8dp"
                        android:layout_marginRight="8dp"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        tools:text="25"/>
                    <TextView
                        android:id="@+id/textVisibility"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_above="@id/textRealFeel"
                        android:layout_alignParentLeft="true"
                        android:layout_toLeftOf="@+id/iconWeather"
                        app:drawableLeftCompat="@drawable/ic_eye"
                        android:drawablePadding="4dp"
                        android:includeFontPadding="false"
                        android:paddingBottom="3dp"
                        android:layout_marginLeft="4dp"
                        android:textColor="@color/white"
                        app:autoSizeTextType="uniform"
                        android:maxLines="1"
                        android:textSize="15sp"
                        android:text="@string/visibility"/>
                    <TextView
                        android:id="@+id/textRealFeel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_above="@+id/forecastCard"
                        android:layout_alignParentLeft="true"
                        android:layout_toLeftOf="@+id/iconWeather"
                        android:includeFontPadding="false"
                        android:paddingBottom="3dp"
                        android:layout_marginLeft="4dp"
                        android:textColor="@color/white"
                        app:autoSizeTextType="uniform"
                        android:maxLines="1"
                        android:textSize="15sp"
                        android:text="@string/title_real_feel"/>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/forecastCard"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textMaxTemp"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/bg_card_main">

                        <TextView
                            android:id="@+id/titleDailyForecast"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:drawablePadding="8dp"
                            android:paddingHorizontal="12dp"
                            android:paddingVertical="8dp"
                            android:text="@string/daily_forecast"
                            android:textColor="@color/white"
                            android:textSize="18sp"
                            app:drawableStartCompat="@drawable/ic_daily"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <View
                            android:layout_width="0dp"
                            android:layout_height="1dp"
                            android:layout_marginHorizontal="8dp"
                            android:alpha="0.6"
                            android:background="@color/white"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/titleDailyForecast" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/forecastList"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:overScrollMode="never"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/titleDailyForecast" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                    <include
                        android:id="@+id/gridWeather"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/forecastCard"
                        android:layout_marginTop="16dp"
                        layout="@layout/grid_weather"/>
                </RelativeLayout>
            </androidx.core.widget.NestedScrollView>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    </LinearLayout>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/mainNav"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@drawable/bg_nav_drawer">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <include layout="@layout/nav_header_drawer"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="8dp"
                app:hintAnimationEnabled="false"
                app:hintEnabled="false"
                app:endIconMode="clear_text"
                android:clipToPadding="false"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <AutoCompleteTextView
                    android:id="@+id/edtCity"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:drawableStart="@drawable/ic_search"
                    android:drawablePadding="4dp"
                    android:background="@drawable/bg_search_box"
                    android:inputType="text"
                    android:paddingHorizontal="10dp"
                    android:hint="@string/hint_search_city"
                    android:textSize="15sp"
                    android:textColor="@color/grey_900"
                    android:maxLines="1"
                    android:completionThreshold="1"
                    android:imeOptions="actionSearch"
                    android:gravity="center_vertical"/>
            </com.google.android.material.textfield.TextInputLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/historySearchList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:overScrollMode="never"/>
        </LinearLayout>
    </com.google.android.material.navigation.NavigationView>
</androidx.drawerlayout.widget.DrawerLayout>